# speech-id

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  speech_id_presentation.html
configs/: config.ini  models.py
data_base/: .env.example  README.md  docker-compose.yml  init.sql  populate_db.py  preflight_data.py  restore_db.sh  schema.template.sql  schema_overview.py
evaluate/: README.md  config.py  data.py  evaluate_search.py  metrics.py  reporting.py  runner.py  search.py
report/: report.tex
results/: database_schema_overview.md  speaker_search_evaluation.json  speaker_search_evaluation_ecapa.json  speaker_search_evaluation_wavlm.json  speaker_search_evaluation_wavlm_xvector.json
results_metadata_probes/: speaker_search_evaluation_ecapa.json  speaker_search_evaluation_wavlm.json  speaker_search_evaluation_wavlm_xvector.json
scripts/: embeding_extractor.py  make_test_split.py  wavlm_extractor.py
