[project]
name = "speech-id"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "librosa>=0.11.0",
    "numpy>=2.4.5",
    "scipy-stubs~=1.17.1",
    "speechbrain>=1.1.0",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchcodec>=0.12.0",
]

[dependency-groups]
dev = [
    "black>=26.5.0",
    "pre-commit>=4.6.0",
]
