[project]
name = "speech-id"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "speechbrain>=1.1.0",
    "torch>=2.11,<2.12",
    "torchaudio>=2.11,<2.12",
    # torchcodec is torchaudio's audio I/O backend in torch 2.11. We use the
    # CPU build from PyPI (not the +cu128 one): audio is decoded to CPU tensors
    # then moved to GPU manually, and the CPU wheel avoids the cu128 build's
    # unconditional NPP/libcudart linkage that the loader can't resolve.
    "torchcodec>=0.11,<0.12",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchaudio = [{ index = "pytorch-cu128" }]

[dependency-groups]
dev = [
    "black>=26.5.0",
    "pre-commit>=4.6.0",
]
